kubernetes/apps/default/nextcloud/httproute.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
spec:
  hostnames:
  - cloud.${SECRET_DOMAIN}
  parentRefs:
  - name: external
    namespace: network
    sectionName: https
  rules:
  # notify_push websocket endpoint for real-time file updates
  - matches:
    - path:
        type: PathPrefix
        value: /push
    backendRefs:
    - name: nextcloud-notify-push
      port: 7867
  # Main Nextcloud application
  - backendRefs:
    - name: nextcloud
      port: 8080
    filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        set:
        - name: Strict-Transport-Security
          value: max-age=15552000; includeSubDomains
